# empirical-autoresearch

./: .gitignore  README.md  analysis.py  hypotheses.md  instruments.md  measure.py  program.md  pyproject.toml  target.py
